# Personal

./: ForExample.cpp  Journal Club list  Journal Club list~  README.md
0.-Model/: Model.m  Modeling2_6_5_2015.m  firststatespace.slx
Algorithms/: ComputeEventsHyQ.py  ComputeEventsHyQ2.py  OscillatorHyQ.py  RealTimeGenerationHyQ.py  ReplaceEventsHyQ.py  SimulationAnticipation.py  clearall.py
CNNCpp/: -home-octaviovillarreal-Git-Personal-CNNCpp-.txt  CsvRead.h  HyQNN.h  LF-SimpCNN-conv_part-layer_0-bias.csv  LF-SimpCNN-conv_part-layer_0-kernel.csv  LF-SimpCNN-conv_part-layer_0-kernel.csv~  LF-SimpCNN-conv_part-layer_1-bias.csv  LF-SimpCNN-conv_part-layer_1-kernel.csv  LF-SimpCNN-conv_part-layer_1-kernel.csv~  LF-SimpCNN-conv_part-layer_1-kernel_INDICES.csv  LF-SimpCNN-conv_part-layer_2-bias.csv  LF-SimpCNN-conv_part-layer_3-bias.csv  LF-SimpCNN-conv_part-layer_3-kernel.csv  LF-SimpCNN-ffnn_part-layer_0-W.csv  LF-SimpCNN-ffnn_part-layer_0-W.csv~  LF-SimpCNN-ffnn_part-layer_0-b.csv  LF-SimpCNN-ffnn_part-layer_1-W.csv  LF-SimpCNN-ffnn_part-layer_1-W.csv~  LF-SimpCNN-ffnn_part-layer_1-b.csv  MaxPlusScheduler  MaxPlusScheduler.cpp  SimpCNN-conv_part-layer_0-kernel_INDICES.csv  SimpCNN-conv_part-layer_1-kernel_INDICES.csv  compiling_error.txt  csvRead.h  image0.csv  load_csv.cpp  load_csv.h  loadcsv.h  tensorbuild.h
Changed messed up version/common_utilities/common_utilities/: package.xml
Changed messed up version/common_utilities/force_controller/: package.xml
Changed messed up version/common_utilities/force_controller/include/force_controller/: ForceController.h
Changed messed up version/common_utilities/force_controller/src/: ForceController.cpp
Changed messed up version/common_utilities/terrain_estimator/: package.xml
Changed messed up version/common_utilities/terrain_estimator/src/: CTerrainEstimator.cpp
Changed messed up version/common_utilities/trunk_controller/: CMakeLists.txt  package.xml
Changed messed up version/common_utilities/trunk_controller/include/trunk_controller/: TrunkControllerGrfOptimization.h
Changed messed up version/common_utilities/trunk_controller/src/: TrunkControllerGrfOptimization.cpp
Changed messed up version/common_utilities/trunk_controller/tests/: testtrunk
Changed messed up version/rcf_controller/: CMakeLists.txt  CMakeLists.txt~  README.md
Changed messed up version/rcf_controller/config/: hyq2max_real_options.ini  hyq2max_sim_options.ini  hyq_real_options.ini  real_options.ini  sim_options.ini
Changed messed up version/rcf_controller/include/rcf_controller/: RCFController.h
Changed messed up version/rcf_controller/include/rcf_controller/support/: CPGOmegaGen.h  CTrunkController.h  HyQ2MaxWorkspaceCheck.h  MPScheduler.h
Changed messed up version/rcf_controller/src/: RCFConsole.cpp  RCFController.cpp  compiling_error.txt
Changed messed up version/rcf_controller/src/support/: CRCFOdometry.cpp  CTrunkController.cpp  HyQ2MaxWorkspaceCheck.cpp
Changed messed up version/signal_scope_headers/: CMakeLists.txt  LeapBaseVariables.py  LeapFeetAndForces.py  LeapVariables.py  LeapVelocities.py  actuator_pos_vel.py  all.py  debug_crawl.py  debug_fast_crawl.py  debug_wrench.py  debug_zmp.py  dwl_base_angular_states.py  dwl_base_linear_states.py  dwl_base_positions.py  dwl_contact_states.py  dwl_joint_positions.py  dwl_joint_states.py  efforts.py  front_torques.py  haa_efforts.py  heightReflex.py  hyq2max.py  id.py  joint_eff.py  joint_pos.py  leg_synchrony.py  maxplus_debug.py  motor.py  package.xml  position_limits.py  pressures.py  rcf_test.py  stanceReflex.py  torque_limits.py  torques.py  util.py  xpp_zmp.py
DLS Seminar presentation template/: MyBib.bib  beamerinnerthemetud.sty  beamerouterthemetud.sty  presentation.aux  presentation.bcf  presentation.out  presentationseminar.aux  presentationseminar.blg  presentationseminar.nav  presentationseminar.snm  presentationseminar.tex  presentationseminar.toc
MaxPlusCpp/: GaitTransition.h  MPA.h  MPScheduler.h  MaxPlusScheduler  MaxPlusScheduler.cpp
Mini Project 1/: ROBOT.ttt  RunRobotDynamicstestallCtime.m  anim.m  desiredendeffector.mat  endeffector.mat  modelinit.m  qres.mat  readme.txt  time.mat
PhD meeting template/: presentation-blx.bib  presentation.aux  presentation.nav  presentation.out  presentation.tex  presentation.toc  presentationseminar.aux  presentationseminar.nav  presentationseminar.out  presentationseminar.tex  presentationseminar.toc
Presentation iit/: My Collection.bib  MyBib.bib  MyStyle.sty  document.aux  document.bbl  document.blg  document.nav  document.out  document.run.xml  document.snm  document.tex  document.toc
Presentation template/: beamerinnerthemetud.sty  presentation.aux  presentation.nav  presentation.snm  presentation.tex  presentation.toc
Template progress reports/: My Collection.bib  MyBib.bib  main.aux  main.bbl  main.blg  main.tex  main.toc
Working Test 2 not my trajectory file/: body_animate.m  body_control.m  body_control0.m  body_eom.m  body_eom_control.m  body_trajectory.m  bodyq2x.m  bodyx2q.m  testAssignment2.m
common_utilities/kinematic_adjustment/: CMakeLists.txt  package.xml
common_utilities/kinematic_adjustment/include/kinematic_adjustment/: CKinematicAdjustment.h
common_utilities/kinematic_adjustment/src/: CKinematicAdjustment.cpp
common_utilities/math_utils/: CMakeLists.txt  package.xml
common_utilities/math_utils/include/math_utils/: utils.h
common_utilities/push_recovery/: CMakeLists.txt  package.xml
common_utilities/push_recovery/include/push_recovery/: CPushRecovery.h  CPushRecovery2DOF.h
common_utilities/push_recovery/src/: CPushRecovery2DOF.cpp
demo/: demo.aux  demo.blg  (+6 more)
rcf_controller/: controller_plugin.xml  package.xml
rcf_controller/config/: hyq_sim_options.ini
rcf_controller/include/rcf_controller/: RCFController.h  compiling_error.txt
rcf_controller/include/rcf_controller/support/: CPIDManager.h  CRCFOdometry.h  CTerrainBasedAdjustment.h  MPScheduler.h
rcf_controller/src/: RCFConsole.cpp  RCFController.cpp
rcf_controller/src/support/: CPIDManager.cpp  CTerrainBasedAdjustment.cpp
(+141 files in other folders)
