<?xml version="1.0"?>
<package>
  <name>rcf_controller</name>
  <version>0.0.1</version>
  <description>The hyq2max_rcf_coordinator package implements the trotting, walking,
   and other task coordinators used by HyQ2Max robot</description>

  <maintainer email="hyq@advr.iit.it">HyQ Group</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>dls_controller</build_depend>
  <build_depend>central_pattern_generator</build_depend>
  <build_depend>kinematic_adjustment</build_depend>
  <build_depend>push_recovery</build_depend>
  <build_depend>terrain_estimator</build_depend>
  <build_depend>kalman_state_estimator</build_depend>
  <build_depend>hyq2max_ik</build_depend>
  <build_depend>hyq_ik</build_depend>
  <build_depend>math_utils</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>dls_controller</run_depend>
  <run_depend>central_pattern_generator</run_depend>
  <run_depend>kinematic_adjustment</run_depend>
  <run_depend>push_recovery</run_depend>
  <run_depend>terrain_estimator</run_depend>
  <run_depend>kalman_state_estimator</run_depend>
  <run_depend>hyq2max_ik</run_depend>
  <run_depend>hyq_ik</run_depend>
  <run_depend>math_utils</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <dls_controller plugin="${prefix}/controller_plugin.xml"/>
  </export>
</package>
