<?xml version="1.0"?>
<package>
  <name>signal_scope_headers</name>
  <version>0.0.1</version>
  <license>TODO</license>
  <maintainer email="jose.colmenares@iit.it">Jose Colmenares</maintainer>
  <description>The header files to use LCM signal plot</description>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>lcm</build_depend>

  <run_depend>roscpp</run_depend>

</package>
   
